--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Converter</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index,js"></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <div class="search-bar">
+        <input placeholder="Location">
+    </div>
+    <div class="local">
+        <div>Local Time</div>
+        <span id="l-day">day</span>
+        <span id="l-month">month</span>
+        <span id="l-year">year</span>
+        <span id="l-dayOfWeek">dow</span>
+        <div id="l-localTime">00:00:00</div>
+    </div>
+    <div class="location">
+        <div>Location Time</div>
+        <span id="l-day">day</span>
+        <span id="l-month">month</span>
+        <span id="l-year">year</span>
+        <span id="l-dayOfWeek">dow</span>
+        <div id="locationTime">00:00:00</div>
+    </div>
 </body>
 </html>
