Implement location time rendering. Currently hardcoded the selected timezone as NY.

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <span id="l-month">month</span>
         <span id="l-year">year</span>
         <span id="l-dayOfWeek">dow</span>
-        <div id="l-localTime">00:00:00</div>
+        <div id="l-time">00:00:00</div>
     </div>
     <div class="location">
         <div>Location Time</div>
-        <span id="l-day">day</span>
-        <span id="l-month">month</span>
-        <span id="l-year">year</span>
-        <span id="l-dayOfWeek">dow</span>
-        <div id="locationTime">00:00:00</div>
+        <span id="location-day">day</span>
+        <span id="location-month">month</span>
+        <span id="location-year">year</span>
+        <span id="location-dayOfWeek">dow</span>
+        <div id="location-time">00:00:00</div>
     </div>
 </body>
 </html>
