--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="dropdown-menu">
         <select id="timezone-select" onchange="handleTimezoneChange()">
             <option value="">America New York</option>
+            <button>Add</button>
         </select>
     </div>
     <div class="timeContainer">
